--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "MultiSafe Stats",
-  "name": "MultiSafe Stats",
+  "short_name": "MultiSafe Analytics",
+  "name": "MultiSafe Analytics",
   "icons": [
     {
       "src": "favicon.png",
