--- a/package.json
+++ b/package.json
@@ -47,5 +47,13 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "resolutions": {
+    "minimatch": ">=3.0.5",
+    "nth-check": ">=2.0.1"
+  },
+  "overrides": {
+    "minimatch": ">=3.0.5",
+    "nth-check": ">=2.0.1"
   }
 }
